--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -122,22 +122,27 @@ import Base from "../layouts/Base.astro";
     "#contact-form-errors"
   );
 
+  // Function is called through Turnstile onload callback
+  // ts-ignore doesn't work here due to bug
+  // https://github.com/withastro/astro/issues/7281
+  // @ts-ignore
   function initTurnstile() {
     let turnstileActive = false;
 
     // prettier-ignore
     document.querySelectorAll(".contact-form-input input, .contact-form-input textarea").forEach((elem) => {
-      elem.addEventListener("focus", (e) => {
+      elem.addEventListener("focus", () => {
         contactFormErrorsElement.classList.remove("block");
         contactFormErrorsElement.classList.add("hidden");
         contactFormErrorsElement.innerHTML = "";
 
         if (turnstileActive) return;
-        const cfTurnstile = document.querySelector(".cf-turnstile");
-        cfTurnstile.classList.remove("hidden");
-        cfTurnstile.classList.add("flex");
-        // @ts-ignore
-        turnstile.execute(cfTurnstile);
+        const turnstileElement = document.querySelector(".cf-turnstile");
+        turnstileElement.classList.remove("hidden");
+        turnstileElement.classList.add("flex");
+        // turnstile variable comes from Turnstile script at top of file
+        // it is added as window variable and accessible here
+        turnstile.execute(turnstileElement);
         turnstileActive = true;
       });
     });
