optimize logo through svg injection

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -25,7 +25,12 @@ const navItems = [
       <div class="mr-18 flex-1 basis-80 md:flex md:items-center">
         <a class="block text-teal-600" href="/">
           <span class="sr-only">Home</span>
-          <img src="/logo.png" alt="Brielle French Design Logo" />
+          <img
+            src="logo.svg"
+            class="h-full w-3/4"
+            alt="Brielle French Design Logo"
+            onload="SVGInject(this)"
+          />
         </a>
       </div>
 
