--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,6 +17,10 @@ const { title, description } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <script
+      is:inline
+      src="https://www.unpkg.com/@iconfu/svg-inject/dist/svg-inject.min.js"
+    ></script>
   </head>
   <body>
     <Nav />
