--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import { aboutPage } from "../lib/getContent";
 import { Image } from "astro:assets";
 import Base from "../layouts/Base.astro";
 import Headshot from "../assets/about-headshot.png";
@@ -7,33 +8,32 @@ import Logo from "../assets/about-logo.png";
 
 <Base>
   <main
-    class="xl:pl-1/5 relative z-10 mb-36 grid lg:h-[calc(100vh-12rem)] min-h-[calc(100vh-12rem)] bg-white px-10 lg:grid-cols-3 lg:pl-28 lg:pr-0"
+    class="xl:pl-1/5 relative z-10 mb-36 grid min-h-[calc(100vh-12rem)] bg-white px-10 lg:h-[calc(100vh-12rem)] lg:grid-cols-3 lg:pl-28 lg:pr-0"
   >
     <article
       class="font-base text-gray-700 lg:col-start-1 lg:col-end-2 lg:row-start-1 lg:mt-32"
     >
-      <h2 class="color-[#FF7DB8] mt-auto pb-12 text-6xl font-bold lg:text-8xl">
-        Hello!
-      </h2>
-      <p class="text-md w-full leading-snug sm:text-lg">
-        I'm Brielle French. This is information about me. This is my design
-        experience. These are my areas of interest. This is my philosophy and
-        approach to design. This is a little bit of information about my
-        personal life so you can get to know me as a person.
-      </p>
+      <h2
+        set:html={aboutPage.title}
+        class="color-[#FF7DB8] mt-auto pb-12 text-6xl font-bold lg:text-8xl"
+      />
+      <p
+        set:html={aboutPage.bioText}
+        class="text-md w-full leading-snug sm:text-lg"
+      />
     </article>
     <div
-      class="col-end--1 xl:col-end--1 col-start-2 grid h-full lg:h-[calc(100vh-12rem)] w-full items-end justify-items-end xl:row-start-1"
+      class="col-end--1 xl:col-end--1 col-start-2 grid h-full w-full items-end justify-items-end lg:h-[calc(100vh-12rem)] xl:row-start-1"
     >
       <Image
         src={Headshot}
         alt="Brielle French"
-        class="relative left-10 lg:static overflow-auto row-end--1 col-end--1 col-start-1 row-start-1"
+        class="row-end--1 col-end--1 relative left-10 col-start-1 row-start-1 overflow-auto lg:static"
       />
       <Image
         src={Logo}
         alt=""
-        class="relative left-10 lg:static overflow-auto row-end--1 col-end--1 -z-10 col-start-1 row-start-1"
+        class="row-end--1 col-end--1 relative left-10 -z-10 col-start-1 row-start-1 overflow-auto lg:static"
       />
     </div>
   </main>
