--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
+import { homePage } from "../lib/getContent";
 import { Image } from "astro:assets";
 import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main class="relative z-10 mb-36 block min-h-[calc(100vh-12rem)] bg-white">
+  <main
+    class="relative z-10 mb-36 block min-h-[calc(100vh-12rem)] bg-white"
+    data-slotMachineTextList={homePage.rotatingText}
+  >
     <div class="grid h-full justify-center px-10 md:grid-cols-10">
       <div
         class="md:col-end--1 z-[-100] flex h-full items-center justify-center md:col-start-4 md:row-start-1 lg:ml-[-200px] lg:w-auto"
@@ -20,10 +24,14 @@ import Base from "../layouts/Base.astro";
       <div
         class="font-base leading-16 lg:leading-30 h-full justify-center text-left text-5xl font-bold sm:text-6xl md:col-start-1 md:col-end-6 md:row-start-1 md:flex md:flex-col md:items-end md:text-right md:text-7xl lg:text-8xl"
       >
-        <div class="block md:mt-24">Invest in</div>
+        <div class="block md:mt-24" set:html={homePage.stillText} />
         <div class="flex items-end md:w-full">
           <div class="slot-machine">
-            <div id="design" class="mb-66.25">design</div>
+            <div
+              id="design"
+              class="mb-66.25"
+              set:html={homePage.firstTextEntry}
+            />
           </div>
         </div>
       </div>
@@ -33,12 +41,9 @@ import Base from "../layouts/Base.astro";
 
 <script>
   import { SlotMachineEffect } from "../lib/slotMachineEffect";
-  const slotMachineTextList = [
-    "social media content",
-    "brand identity",
-    "business cards",
-    "cover design",
-  ];
+  const slotMachineTextList = document
+    .querySelector("main")!
+    .dataset!.slotmachinetextlist!.split(",");
 
   const machine = new SlotMachineEffect({
     wordList: slotMachineTextList,
