--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,12 @@
 <footer class="fixed bottom-0 h-36 w-full bg-gray-200">
   <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between">
-      <p
-        class="mt-4 flex-1 text-center text-sm text-gray-700 sm:text-base"
-      >
+      <p class="mt-4 flex-1 text-center text-sm text-gray-700 sm:text-base">
         &copy; 2023 Brielle French. <br class="sm:hidden" />All rights reserved.
         <br />
-        Built by <a href="https://arimgibson.com" class="underline">Ari Gibson</a>
+        Built by <a href="https://arimgibson.com" class="underline"
+          >Ari Gibson</a
+        >
         <span class="hidden sm:inline">|</span><br class="sm:hidden" />
         Design by Brielle French
         <br />
