dynamically size about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,10 +8,10 @@ import Logo from "../assets/about-logo.png";
 
 <Base>
   <main
-    class="xl:pl-1/5 relative z-10 mb-36 grid min-h-[calc(100vh-12rem)] bg-white px-10 lg:h-[calc(100vh-12rem)] lg:grid-cols-3 lg:pl-28 lg:pr-0"
+    class="xl:pl-1/5 relative z-10 mb-36 grid min-h-[calc(100vh-12rem)] bg-white px-10 lg:grid-cols-3 lg:pl-28 lg:pr-0"
   >
     <article
-      class="font-base text-gray-700 lg:col-start-1 lg:col-end-2 lg:row-start-1 lg:mt-32"
+      class="font-base text-gray-700 lg:col-start-1 lg:col-end-2 lg:row-start-1 lg:mt-18 lg:mb-8"
     >
       <h2
         set:html={aboutPage.title}
