update to absolute public paths

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Base from "../layouts/Base.astro";
       >
         <!-- Image is purely decorative, no alt tag needed -->
         <img
-          src="home-page-logo.svg"
+          src="/home-page-logo.svg"
           alt=""
           class="md:max-w-200 sm:w-4/5 md:w-full"
           onload="SVGInject(this)"
