--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -26,7 +26,7 @@ const navItems = [
         <a class="block text-teal-600" href="/">
           <span class="sr-only">Home</span>
           <img
-            src="logo.svg"
+            src="/logo.svg"
             class="h-full w-3/4"
             alt="Brielle French Design Logo"
             onload="SVGInject(this)"
