fix issues with footer not displaying all text

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import Base from "../layouts/Base.astro";
 
 <Base>
   <main
-    class="relative z-10 mb-36 block min-h-[calc(100vh-12rem)] w-full bg-white"
+    class="relative z-10 mb-48 block min-h-[calc(100vh-12rem)] w-full bg-white sm:mb-36"
   >
     <section class="bg-white">
       <div class="font-base container mx-auto px-6 py-12 xl:px-24">
