--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Base from "../layouts/Base.astro";
 
 <Base>
   <main
-    class="relative z-10 mb-36 block min-h-[calc(100vh-12rem)] bg-white"
+    class="relative z-10 mb-48 block min-h-[calc(100vh-12rem)] bg-white sm:mb-36"
     data-slotMachineTextList={homePage.rotatingText}
   >
     <div class="grid h-full justify-center px-10 md:grid-cols-10">
