--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<footer class="fixed bottom-0 h-36 w-full bg-gray-200">
+<footer class="fixed bottom-0 h-48 w-full bg-gray-200 sm:h-36">
   <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between">
       <p class="mt-4 flex-1 text-center text-sm text-gray-700 sm:text-base">
