--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -3,5 +3,8 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main class="relative z-10 mb-36 block h-[calc(100vh-12rem)] bg-white"></main>
+  <main
+    class="relative z-10 mb-48 block h-[calc(100vh-12rem)] bg-white sm:mb-36"
+  >
+  </main>
 </Base>
