fix issue with contact page extending past footer

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import Base from "../layouts/Base.astro";
 
 <Base>
   <main
-    class="relative z-10 mb-48 block min-h-[calc(100vh-12rem)] w-full bg-white sm:mb-36"
+    class="relative z-10 mb-48 block min-h-[calc(100vh-12rem)] bg-white sm:mb-36"
   >
     <section class="bg-white">
       <div class="font-base container mx-auto px-6 py-12 xl:px-24">
@@ -51,7 +51,7 @@ import Base from "../layouts/Base.astro";
               Let's <br class="hidden lg:block" /> Chat
             </h1>
 
-            <div class="mt-6 w-80 md:mt-8">
+            <div class="mt-6 md:mt-8">
               <div class="-mx-1.5 mt-4 flex">
                 <a
                   class="mx-1.5 transform text-gray-400 transition-colors duration-300 hover:text-[#FF7DB8]"
