--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -13,7 +13,7 @@ const {
 ---
 
 <div id={slug} data-service-section class="font-base scroll-m-16">
-  <h2 class="text-xl sm:text-2xl pb-4">{name}</h2>
+  <h2 class="pb-4 text-xl sm:text-2xl">{name}</h2>
   <div>
     <p set:html={description} />
   </div>
