--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -9,6 +9,6 @@ const { title, slug, description } = Astro.props;
 ---
 
 <div id={slug} data-service-section class="font-base scroll-m-16">
-  <h2 class="pb-4 text-xl sm:text-2xl">{title}</h2>
-  <p set:html={description} />
+  <h2 class="pb-4 text-xl sm:text-2xl lg:text-4xl font-bold">{title}</h2>
+  <p set:html={description} class="[&~ul]:pl-4 [&~ul]:list-disc"/>
 </div>
