--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -24,7 +24,7 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
 
 <Base>
   <main
-    class="base-main lg:grid lg:grid-cols-20"
+    class="base-main bg-#F2F2F2 lg:grid lg:grid-cols-20"
   >
     <div
       id="select-container"
@@ -71,7 +71,7 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
 
     <article
       id="content"
-      class="lg:col-end-20 mx-4 sm:mx-12 md:mx-20 lg:col-start-8 lg:row-start-1 lg:[&>*:first-child]:scroll-m-512"
+      class="lg:col-end-20 mx-4 sm:mx-12 md:mx-20 lg:col-start-8 lg:row-start-1 lg:[&>*:first-child]:scroll-m-512 lg:[&>*:first-child]:pt-16"
     >
       <ServicesSection
         title={servicesPage.title}
@@ -184,9 +184,3 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
     });
   });
 </script>
-
-<style>
-  #content > div:first-child {
-    @apply scroll-m-512;
-  }
-</style>
