navbar smaller on mobile, reduce contact page padding

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -21,7 +21,7 @@ const navItems = [
 
 <header class="bg-white">
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
-    <div class="flex h-48 items-center justify-between">
+    <div class="flex h-32 items-center justify-between lg:h-48">
       <div class="mr-18 flex-1 basis-80 md:flex md:items-center">
         <a class="block text-teal-600" href="/">
           <span class="sr-only">Home</span>
