--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import Base from "../layouts/Base.astro";
     class="relative z-10 mb-48 block min-h-[calc(100vh-12rem)] bg-white sm:mb-36"
   >
     <section class="bg-white">
-      <div class="font-base container mx-auto px-6 py-12 xl:px-24">
+      <div class="font-base container mx-auto px-6 py-4 xl:px-24">
         <div class="flex flex-col-reverse lg:-mx-6 lg:flex-row lg:items-center">
           <div class="mt-8 lg:mx-6 lg:w-2/3">
             <div
@@ -44,7 +44,7 @@ import Base from "../layouts/Base.astro";
               </form>
             </div>
           </div>
-          <div class="lg:mx-6 lg:w-1/3">
+          <div class="mx-3 lg:mx-6 lg:w-1/3">
             <h1
               class="text-6xl font-semibold capitalize text-[#FF7DB8] lg:text-8xl"
             >
