--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -8,7 +8,15 @@ interface Props {
 const { title, slug, description } = Astro.props;
 ---
 
-<div id={slug} data-service-section class="font-base scroll-m-16">
+<div
+  id={slug}
+  data-service-section
+  class:list={[
+    "font-base scroll-m-16",
+    slug === "everything-else" ? "pb-32" : "mb-32",
+  ]}
+>
   <h2 class="pb-4 text-xl sm:text-2xl lg:text-4xl font-bold">{title}</h2>
-  <p set:html={description} class="[&~ul]:pl-4 [&~ul]:list-disc"/>
+  <p set:html={description} class="[&~ul]:pl-4 [&~ul]:list-disc" />
+  {slug === "everything-else" && <div class="h-64" />}
 </div>
