--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -151,7 +151,9 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
   const sectionObserver = new IntersectionObserver(
     (entries) => {
       entries.forEach((entry) => {
+        console.log(entry)
         if (entry.isIntersecting && !scrolling) {
+          console.log(entry)
           sectionSelector.value = entry.target.id;
           const sidebarAnchor = document.querySelector(
             `#sidebar > a[href="#${entry.target.id}"]`
@@ -171,26 +173,10 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
     }
   );
 
-  // stylizes the sections to have a margin bottom that is the height of the screen minus the height of the section and navbar
+  // observe each section on page
   document
     .querySelectorAll("[data-service-section]")
     .forEach((section, i, arr) => {
-      const isLastElement = i === arr.length - 1;
-      // if last item, use smaller padding
-      const sectionMargin = isLastElement
-        ? 128
-        : screen.height +
-          selectContainer.offsetHeight -
-          (section as HTMLDivElement).offsetHeight -
-          4 * remSize;
-          
-      isLastElement
-        ? ((
-            section as HTMLDivElement
-          ).style.paddingBottom = `${sectionMargin}px`)
-        : ((
-            section as HTMLDivElement
-          ).style.marginBottom = `${sectionMargin}px`);
       sectionObserver.observe(section);
     });
 
