reusable main styles

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,9 +3,7 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main
-    class="relative z-10 mb-48 block min-h-[calc(100vh-12rem)] bg-white sm:mb-36"
-  >
+  <main class="base-main">
     <section class="bg-white">
       <div class="font-base container mx-auto px-6 py-4 xl:px-24">
         <div class="flex flex-col-reverse lg:-mx-6 lg:flex-row lg:items-center">
