--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -3,8 +3,5 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main
-    class="relative z-10 mb-48 block h-[calc(100vh-12rem)] bg-white sm:mb-36"
-  >
-  </main>
+  <main class="base-main"></main>
 </Base>
