--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -16,7 +16,7 @@ const { title, slug, description } = Astro.props;
     slug === "everything-else" ? "pb-32" : "mb-32",
   ]}
 >
-  <h2 class="pb-4 text-xl sm:text-2xl lg:text-4xl font-bold">{title}</h2>
-  <p set:html={description} class="[&~ul]:pl-4 [&~ul]:list-disc" />
+  <h2 class="pb-4 text-xl font-bold sm:text-2xl lg:text-4xl">{title}</h2>
+  <p set:html={description} class="[&~ul]:list-disc [&~ul]:pl-4" />
   {slug === "everything-else" && <div class="h-64" />}
 </div>
