--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -13,10 +13,9 @@ const { title, slug, description } = Astro.props;
   data-service-section
   class:list={[
     "font-base scroll-m-16",
-    slug === "everything-else" ? "pb-32" : "mb-32",
+    slug === "everything-else" ? "pb-48 lg:pb-64" : "mb-48 lg:mb-64",
   ]}
 >
   <h2 class="pb-4 text-xl font-bold sm:text-2xl lg:text-4xl">{title}</h2>
   <p set:html={description} class="[&~ul]:list-disc [&~ul]:pl-4" />
-  {slug === "everything-else" && <div class="h-64" />}
 </div>
