--- a/src/pages/index-new.astro
+++ b/src/pages/index-new.astro
@@ -6,19 +6,19 @@ import Base from "../layouts/Base.astro";
 
 <Base>
   <main
-    class="base-main overflow-hidden grid grid-cols-1 justify-center w-full"
+    class="base-main px-10 overflow-hidden grid grid-cols-1 md:grid-cols-10 justify-center w-full"
     data-slotMachineTextList={homePage.rotatingText}
   >
-    <div class="absolute top-0 left-0 -z-10 w-full h-full flex flex-col-reverse">
+    <div class="absolute top-0 left-0 -z-10 md:justify-end md:static lg:-ml-200px w-full md:w-auto h-full flex flex-col-reverse md:items-center md:col-start-4 md:col-end--1 md:row-start-1">
       <img
         src="/home-page-logo.svg"
         alt=""
-        class="relative -left-25vw -bottom-64 md:max-w-200 w-2/1 md:w-full"
+        class="relative -left-25vw -bottom-64 md:max-w-200 w-2/1 md:w-full md:static"
         onload="SVGInject(this)"
       />
     </div>
     <div
-      class="[@media(min-width:600px)]:w-4/5 mt-16 px-10 justify-self-center font-base leading-16 lg:leading-30 text-left text-5xl font-bold sm:text-6xl md:col-start-1 md:col-end-6 md:row-start-1 md:flex md:flex-col md:items-end md:text-right md:text-7xl lg:text-8xl"
+      class="[@media(min-width:600px)]:w-4/5 md:w-full mt-16 justify-self-center font-base leading-16 lg:leading-30 text-left text-5xl font-bold sm:text-6xl md:col-start-1 md:col-end-6 md:row-start-1 md:flex md:flex-col md:items-end md:text-right md:text-7xl lg:text-8xl"
     >
       <div class="block md:mt-24" set:html={homePage.stillText} />
       <div class="flex items-end md:w-full">
