--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,31 +4,31 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main class="base-main" data-slotMachineTextList={homePage.rotatingText}>
-    <div class="grid h-full justify-center px-10 md:grid-cols-10">
-      <div
-        class="md:col-end--1 z-[-100] flex h-full items-center justify-center md:col-start-4 md:row-start-1 lg:ml-[-200px] lg:w-auto"
-      >
-        <!-- Image is purely decorative, no alt tag needed -->
-        <img
-          src="/home-page-logo.svg"
-          alt=""
-          class="md:max-w-200 sm:w-4/5 md:w-full"
-          onload="SVGInject(this)"
-        />
-      </div>
-      <div
-        class="font-base leading-16 lg:leading-30 h-full justify-center text-left text-5xl font-bold sm:text-6xl md:col-start-1 md:col-end-6 md:row-start-1 md:flex md:flex-col md:items-end md:text-right md:text-7xl lg:text-8xl"
-      >
-        <div class="block md:mt-24" set:html={homePage.stillText} />
-        <div class="flex items-end md:w-full">
-          <div class="slot-machine">
-            <div
-              id="design"
-              class="mb-66.25"
-              set:html={homePage.firstTextEntry}
-            />
-          </div>
+  <main
+    class="base-main grid w-full grid-cols-1 justify-center overflow-hidden px-10 md:grid-cols-10"
+    data-slotMachineTextList={homePage.rotatingText}
+  >
+    <div
+      class="lg:-ml-200px md:col-end--1 absolute left-0 top-0 -z-10 flex h-full w-full flex-col-reverse md:static md:col-start-4 md:row-start-1 md:w-auto md:items-center md:justify-end"
+    >
+      <img
+        src="/home-page-logo.svg"
+        alt=""
+        class="-left-25vw md:max-w-200 w-2/1 relative -bottom-64 md:static md:w-full"
+        onload="SVGInject(this)"
+      />
+    </div>
+    <div
+      class="font-base leading-16 lg:leading-30 mt-16 justify-self-center text-left text-5xl font-bold sm:text-6xl md:col-start-1 md:col-end-6 md:row-start-1 md:flex md:w-full md:flex-col md:items-end md:text-right md:text-7xl lg:text-8xl [@media(min-width:600px)]:w-4/5"
+    >
+      <div class="block md:mt-24" set:html={homePage.stillText} />
+      <div class="flex items-end md:w-full">
+        <div class="slot-machine">
+          <div
+            id="design"
+            class="mb-66.25"
+            set:html={homePage.firstTextEntry}
+          />
         </div>
       </div>
     </div>
