--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,7 @@ import Logo from "../assets/about-logo.png";
       />
     </article>
     <div
-      class="col-end--1 xl:col-end--1 col-start-2 grid h-full w-full items-end justify-items-end lg:h-[calc(100vh-12rem)] xl:row-start-1"
+      class="col-end--1 xl:col-end--1 pointer-events-none col-start-2 grid h-full w-full items-end justify-items-end lg:h-[calc(100vh-12rem)] xl:row-start-1"
     >
       <Image
         src={Headshot}
