--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -16,8 +16,8 @@ const { title, description, type } = Astro.props;
 ---
 
 <Base>
-  <main class="base-main grid grid-rows-2 px-10 lg:grid-cols-2 lg:grid-rows-1">
-    <div class="h-full w-full">
+  <main class="base-main flex flex-col-reverse flex-gap-8 lg:grid px-4 md:px-10 lg:grid-cols-2 lg:grid-rows-1">
+    <div>
       {
         (() => {
           switch (type) {
